plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.3'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'org.example'
version = '0.0.1'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //Spring web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //Spring Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //Spring data
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //Spring Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    //Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //Mapstruct
    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

    //Data
    implementation 'org.postgresql:postgresql:42.5.4'
    implementation 'org.liquibase:liquibase-core:4.19.0'

    //Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

    //Logging
    implementation 'net.logstash.logback:logstash-logback-encoder:7.3'

}

tasks.named('test') {
    useJUnitPlatform()
}
jar {
    enabled = true
    archiveFileName = "${project.name}-light.jar"
}

bootJar {
    enabled = true
    archiveFileName = "${project.name}.jar"
}

archivesBaseName = "${project.name}"